Fixed spacing and minor text size adjustment

--- a/_scss/2-base/_base.scss
+++ b/_scss/2-base/_base.scss
@@ -349,7 +349,7 @@ Contact
 }
 
 .form-control {
-	margin: 5em 0;
+	margin-top: 2em;
 }
 
 textarea {
@@ -361,6 +361,7 @@ textarea {
 	font-size: 2em;
 	-webkit-appearance: none;
 	border-radius: 0;
+	margin-bottom: 1em;
 }
 
 #contact-form [type="submit"] {
