--- a/_scss/2-base/_media-queries.scss
+++ b/_scss/2-base/_media-queries.scss
@@ -92,8 +92,6 @@ Media Queries
 		width: 100%;
 		background-color: white;
 		a {
-			color: black;
-			font-weight: 300;
 			border-bottom: 1px solid $primary-color;
 			&:hover {
 				color: $secondary-color;
@@ -195,7 +193,7 @@ Media Queries
 
 	.about-section-title {
 		margin: 0;
-		font-size: 3em;
+		font-size: 2em;
 	}
 
 	.about-section-text {
@@ -216,7 +214,7 @@ Media Queries
 	}
 
 	.archive-month {
-		font-size: 2.5em;
+		font-size: 2em;
 		width: 500px;
 		margin-top: 0;
 		margin-bottom: .5em;
@@ -226,6 +224,9 @@ Media Queries
 		margin-top: 0;
 		font-size: 1em;
 		line-height: 3;
+		a {
+			border-bottom: 1px solid $primary-color;
+		}
 	}
 
 	/*
